# Scientia

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Examples/: Examples.cpp  Examples.h
Examples/Math/: Matrices.h
Printers/: GDBScientiaPrinters.py
Src/Math/: CMakeLists.txt
Src/Math/Public/: Matrix.h  Matrix.inl  Vector.h
Src/Utils/: CMakeLists.txt
Src/Utils/Private/: Utils.cpp
Src/Utils/Public/: Utils.h
Tests/Math/: CMakeLists.txt  MatrixTests.cpp
